# dnf-login

./: .gitignore  Cargo.toml  Cross.toml  README.md
.github/workflows/: ci.yml  release.yml
client/: Cargo.toml  Config.example.toml  build.rs
client/resources/: dnf.rc
client/src/: app.rs  config.rs  i18n.rs  main.rs
client/src/app/: bg.rs  handlers.rs  mod.rs  render.rs  screens.rs  theme.rs  widgets.rs
client/src/game/: mod.rs
client/src/network/: mod.rs
client/src/platform/: mod.rs  windows.rs
client/src/storage/: mod.rs
hook-common/: Cargo.toml
hook-common/src/: lib.rs
ijl15-hook/: Cargo.toml  GameServerIP.example.toml
ijl15-hook/src/: lib.rs
server/: .env.example  Cargo.toml
server/src/: config.rs  db.rs  main.rs
server/src/handlers/: mod.rs
server/src/services/: auth.rs
shared/: Cargo.toml
shared/src/: error.rs  lib.rs  protocol.rs  types.rs
shared/src/crypto/: aes_gcm.rs  mod.rs  token.rs
test-plugin/: Cargo.toml
test-plugin/src/: lib.rs
