[workspace]
resolver = "2"
members = [
    "shared",
    "server",
    "client",
    "test-plugin",
]

[workspace.package]
version = "0.2.1"
edition = "2024"
authors = ["llnut"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.49.0", features = ["full"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Error handling
anyhow = "1.0.102"
thiserror = "2.0.18"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# Cryptography
aes-gcm = "0.10.3"
rsa = "0.9.10"
sha2 = "0.10.9"
rand = "0.10.0"
hex = "0.4.3"
base64 = "0.22.1"

# Time
chrono = { version = "0.4.44" }

# HTTP
reqwest = { version = "0.13.2", features = ["rustls"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
incremental = false
