[package]
name = "dnf-gate-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
dnf-shared = { path = "../shared" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }

axum = "0.8.8"
tower = { version = "0.5.3", features = ["limit", "timeout", "load-shed"] }
tower-http = { version = "0.6.8", features = ["trace", "cors", "compression-gzip"] }
hyper = { version = "1.8.1", features = ["full"] }
hyper-util = { version = "0.1.20", features = ["tokio"] }

# Database - mysql_async with MySQL 5.0 support via prefer_socket(false)
# sqlx does not support MySQL 5.0.x (no CLIENT_PLUGIN_AUTH capability)
mysql_async = { version = "0.36.1", features = ["chrono"] }

dotenvy = "0.15.7"

[dev-dependencies]
tokio-test = "0.4.5"
