[package]
name = "dnf-gate-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
dnf-shared = { path = "../shared" }
tokio = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }

axum = "0.8.8"
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
tower-http = { version = "0.6.8", features = ["trace"] }

# Database - mysql_async with MySQL 5.0 support via prefer_socket(false)
# sqlx does not support MySQL 5.0.x (no CLIENT_PLUGIN_AUTH capability)
mysql_async = "0.36.1"

dotenvy = "0.15.7"
